chore: fix sidebar overlap in storybook

--- a/src/planner2/Planner2.less
+++ b/src/planner2/Planner2.less
@@ -65,6 +65,7 @@
     position: relative;
     overflow: hidden;
     height: 100%;
+    width: 100%;
 
     .planner-area-position-parent {
         position: absolute;
