--- a/stories/styles.less
+++ b/stories/styles.less
@@ -3,7 +3,11 @@
 }
 
 .plan-container {
+    display: flex;
+    flex-direction: row;
+    align-items: stretch;
     height: 100%;
+    width: 100%;
     position: relative;
     overflow: hidden;
     padding: 25px;
@@ -17,10 +21,6 @@
 }
 
 .test-tool-panel {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
     width: 300px;
     background-color: #eee;
     border-left: 2px solid black;
